@startuml
class "eopf.product.EOProduct" {

    ' EOProduct class shall implement Python magic/dunder methods necessary to emulate MutableMapping[Hashable, Group] type. The (Hashable) 'key' being the name of the group.
    __getitem__()
    __setitem__()
    __delitem__()
    __len__()
    __iter__()

    {field}_name : string
    {field}_groups : MutableMapping[hashable,EOGroup]
    {field}_coords : MutableMapping[hashable,EOGroup]
    {field}_attrs : MutableMapping[hashable,EOGroup]
    ' reading/writing mode
    {field}_mode : string
    ' json description of the product structure : chunk, locked chunk , dimensions
    {field}_metadata : MutableMapping[string,hashable]


}


class "eopf.product.EOVariable" {

    ' EOProduct class shall implement Python magic/dunder methods necessary to emulate MutableMapping[Hashable, Group] type. The (Hashable) 'key' being the name of the group.
    'put here dunders
    plot()
}


class "eopf.product.EOVariableOperatorsMixin" {

    'put here dunders
}


eopf.product.EOProduct --|> collections.abc.MutableMapping
note left: Python module

eopf.product.EOVariableOperatorsMixin <|-- eopf.product.EOVariable

@enduml
